# -FPGA_DigitalSignalProcessingExperimentalPlatform

./: .gitattributes  .gitignore  FEP_IO.xlsx  Zynq7020_Test1.xpr
Matlab/: 30-120hamming.coe  empty.coe  example.coe  untitled.fda  插值滤波器.fda
WinApp/: .gitignore
WinApp/UpdateServer/: .gitignore  app.py
WinApp/UpdateServer/json/: firmware.json  resources.json
WinApp/UploadTool/: .gitignore  CMakeLists.txt  UploadTool_zh_CN.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
Zynq7020_Test1.hw/backup/: hw_ila_data_1.ila  hw_ila_data_2.ila
Zynq7020_Test1.hw/hw_1/: hw.xml
Zynq7020_Test1.hw/hw_1/layout/: dashboard_1.layout  hw_ila_1.layout
Zynq7020_Test1.hw/hw_1/wave/hw_ila_data_1/: hw_ila_data_1.wcfg  hw_ila_data_1.wdb
Zynq7020_Test1.hw/hw_1/wave/hw_ila_data_2/: hw_ila_data_2.wcfg  hw_ila_data_2.wdb
Zynq7020_Test1.sdk/: .gitignore  CMakeLists.txt
Zynq7020_Test1.sdk/FSBL/: .cproject
Zynq7020_Test1.sdk/FSBL/src/: ps7_parameters.xml
Zynq7020_Test1.sdk/FSBL_bsp/: .cproject  system.mss
Zynq7020_Test1.sdk/Main/: .cproject  .project
Zynq7020_Test1.sdk/Main/src/: CMakeLists.txt  check.h  lscript.ld  main.c  main.h  platform.c  platform_config.h  system.c  utils.h
Zynq7020_Test1.sdk/Main/src/BMP_encoder/: bmp_encoder.c  bmp_encoder.h
Zynq7020_Test1.sdk/Main/src/Controller/: ADC_Controller.c  ADC_Controller.h  DAC_Controller.c  DAC_Controller.h  DDS_Controller.c  DDS_Controller.h  FFT_Controller.c  FFT_Controller.h  FIR_Controller.c  FIR_Controller.h  SPU_Controller.c  SPU_Controller.h  SignalProcessingUnit_Controller.c  SignalProcessingUnit_Controller.h  UDP_comm_Controller.c  UDP_comm_Controller.h
Zynq7020_Test1.sdk/Main/src/Drivers/AxisSwitch_Driver/: AxisSwitch_Driver.c  AxisSwitch_Driver.h
Zynq7020_Test1.sdk/Main/src/Drivers/DMA_Driver/: DMA_Driver.c  DMA_Driver.h
Zynq7020_Test1.sdk/Main/src/Drivers/DS1337_Driver/: DS1337_Driver.c  DS1337_Driver.h
Zynq7020_Test1.sdk/Main/src/Drivers/Fatfs_init/: Fatfs_Driver.c  Fatfs_Driver.h
Zynq7020_Test1.sdk/Main/src/Drivers/Flash_Driver/: qspi_g128_flash.c  qspi_g128_flash.h
Zynq7020_Test1.sdk/Main/src/Drivers/FreeRTOS_Mem/: FreeRTOS_Mem.c  FreeRTOS_Mem.h
Zynq7020_Test1.sdk/Main/src/Drivers/GT911_Driver/: GT911_Driver.c  GT911_Driver.h
Zynq7020_Test1.sdk/Main/src/Drivers/I2C_Driver/: I2C_Driver.c  I2C_Driver.h
Zynq7020_Test1.sdk/Main/src/Drivers/LVGL_Zynq_Init/: zynq_lvgl_init.c  zynq_lvgl_init.h  zynq_lvgl_snapshot.c  zynq_lvgl_snapshot.h
Zynq7020_Test1.sdk/Main/src/Drivers/LwIP_apps/sntp/: sntp.c  sntp_user.c  sntp_user.h
Zynq7020_Test1.sdk/Main/src/Drivers/LwIP_apps/tftp/: tftp_server.c  tftp_user.c  tftp_user.h
Zynq7020_Test1.sdk/Main/src/Drivers/LwIP_apps/udp_comm/: udp_comm.c  udp_comm.h
Zynq7020_Test1.sdk/Main/src/Drivers/LwIP_init/: LwIP_init.c  LwIP_init.h
Zynq7020_Test1.sdk/Main/src/Drivers/ScuGic_Driver/: ScuGic_Driver.c  ScuGic_Driver.h
Zynq7020_Test1.sdk/Main/src/Drivers/Timer_Driver/: Timer_Driver.c  Timer_Driver.h
Zynq7020_Test1.sdk/Main/src/Drivers/VDMA_Driver/: VDMA_Driver.c  VDMA_Driver.h
Zynq7020_Test1.sdk/Main/src/Drivers/XADC_Driver/: XADC_Driver.c  XADC_Driver.h
Zynq7020_Test1.sdk/Main/src/FileDecoder/: FileDecoder.c  FileDecoder.h
Zynq7020_Test1.sdk/Main/src/LVGL_App/: MainWindow.c  MainWindow.h
Zynq7020_Test1.sdk/Main/src/LVGL_App/AmplitudeResponse/: AmplitudeResponse.c  AmplitudeResponse.h
Zynq7020_Test1.sdk/Main/src/LVGL_App/DigitalFilter/: DigitalFilter.c  DigitalFilter.h
Zynq7020_Test1.sdk/Main/src/LVGL_App/LVGL_Utils/: Chart_zoom_plugin.c  Chart_zoom_plugin.h  FileSelectBox.c  FileSelectBox.h  MessageBox.c  MessageBox.h  slider.c  slider.h  spinbox.c  spinbox.h
Zynq7020_Test1.sdk/Main/src/LVGL_App/NetworkAnalyzer/: NetworkAnalyzer.c  NetworkAnalyzer.h
Zynq7020_Test1.sdk/Main/src/LVGL_App/Oscilloscope/: Oscilloscope.c  Oscilloscope.h
Zynq7020_Test1.sdk/Main/src/LVGL_App/Setup/: Setup.c  Setup.h
Zynq7020_Test1.sdk/Main/src/LVGL_App/SignalGenerator/: SignalGenerator.c  SignalGenerator.h  SignalGenerator_fromFile.c  SignalGenerator_fromFile.h
Zynq7020_Test1.sdk/Main/src/LVGL_App/SpectrumAnalyzer/: SpectrumAnalyzer.c  SpectrumAnalyzer.h
Zynq7020_Test1.sdk/Main/src/LVGL_App/img/: img_fpga_dsp_icon.c
Zynq7020_Test1.sdk/Main/src/SystemConfig/: SystemConfig.c  SystemConfig.h
Zynq7020_Test1.sdk/Main/src/utils/: Array.c  Array.h  List.c  List.h  NodeBase.h  Stack.c  str_tool.c  str_tool.h
Zynq7020_Test1.sdk/Main_bsp/: .cproject  .project  CMakeLists.txt  Makefile  system.mss
Zynq7020_Test1.sdk/arm_math/: .cproject  .project  CMakeLists.txt
Zynq7020_Test1.sdk/arm_math/src/Include/: arm_math.h
Zynq7020_Test1.srcs/constrs_1/new/: XDC.xdc
Zynq7020_Test1.srcs/sources_1/bd/design_1/: design_1.bd  design_1.bxml
Zynq7020_Test1.srcs/sources_1/new/: ADC_Packager.v  AXI4S_FastMod.v  AXI4_Stream_Switch.v  AXI4_Stream_Switch_1_2.v  FFT_Packager.v  deconcentrator.v  fir_out_shifter.v
user_ip/: ADC_Interface.xml  ADC_Interface_rtl.xml  DAC_Interface.xml  DAC_Interface_rtl.xml  edit_AXI4Stream_2_DAC_v1_0.xpr
user_ip/ADC_2_AXI4_Stream_1.0/: component.xml
user_ip/ADC_2_AXI4_Stream_1.0/hdl/: ADC_2_AXI4_Stream_v1_0.v
user_ip/ADC_2_AXI4_Stream_1.0/xgui/: ADC_2_AXI4_Stream_v1_0.tcl
user_ip/AXI4Stream_2_DAC_1.0/: component.xml
user_ip/AXI4Stream_2_DAC_1.0/hdl/: AXI4Stream_2_DAC_v1_0.v
user_ip/AXI4Stream_2_DAC_1.0/xgui/: AXI4Stream_2_DAC_v1_0.tcl
user_ip/AXI4_IO_1.0/: component.xml
user_ip/AXI4_IO_1.0/bd/: bd.tcl
user_ip/AXI4_IO_1.0/example_designs/bfm_design/: AXI4_IO_v1_0_tb.sv  design.tcl
user_ip/AXI4_IO_1.0/example_designs/debug_hw_design/: AXI4_IO_v1_0_hw_test.tcl  design.tcl
user_ip/AXI4_IO_1.0/hdl/: AXI4_IO_v1_0.v  AXI4_IO_v1_0_S00_AXI.v
user_ip/HDMI_FPGA_ML/IPSRC/: component.xml  xvhdl.pb
user_ip/ip_repo/AXI_4x4_Key_Board_1.0/: component.xml
user_ip/ip_repo/AXI_4x4_Key_Board_1.0/hdl/: AXI_4x4_Key_Board_v1_0.v  AXI_4x4_Key_Board_v1_0_S00_AXI.v  KeyBoradDriver.v
user_ip/ip_repo/AXI_4x4_Key_Board_1.0/xgui/: AXI_4x4_Key_Board_v1_0.tcl
user_ip/managed_ip_project/: managed_ip_project.xpr
(+188 files in other folders)
